[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Egg/egg.png" type="Texture" id=1]
[ext_resource path="res://src/Egg/StateMachine/Soar.gd" type="Script" id=2]
[ext_resource path="res://src/Main/StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://src/Egg/StateMachine/Move.gd" type="Script" id=4]
[ext_resource path="res://src/Egg/StateMachine/Idle.gd" type="Script" id=5]
[ext_resource path="res://src/Egg/Egg.gd" type="Script" id=6]
[ext_resource path="res://src/Egg/StateMachine/Fall.gd" type="Script" id=7]

[node name="Egg" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -10 )
polygon = PoolVector2Array( -2, 10, -5, 8, -7, 5, -7, 1, -5, -3, -2, -6, 2, -6, 5, -3, 7, 1, 7, 5, 5, 8, 2, 10 )

[node name="DamageDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DamageDetector"]
position = Vector2( 0, -10 )
polygon = PoolVector2Array( -2, -7, -5, -4, -8, 1, -8, 5, -6, 8, -2, 11, 2, 11, 6, 8, 8, 5, 8, 1, 6, -3, 2, -7 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Move/Idle")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 5 )

[node name="Soar" type="Node" parent="StateMachine/Move"]
script = ExtResource( 2 )

[node name="Fall" type="Node" parent="StateMachine/Move"]
script = ExtResource( 7 )
[connection signal="area_entered" from="DamageDetector" to="." method="_on_DamageDetector_area_entered"]
[connection signal="body_entered" from="DamageDetector" to="." method="_on_DamageDetector_body_entered"]
